# small_AVR_compiler

./: CMakeLists.txt  README.md  avrCompilerCmake.cpp  avrCompilerCmake.h  c_style_compiler_avr.cpp  c_style_compiler_avr.sln  c_style_compiler_avr.vcxproj  c_style_compiler_avr.vcxproj.filters  fileToString.cpp  fileToString.h  parser.cpp  parser.h  src.txt  tokenizer.cpp  tokenizer.h
c_style_.c581acf0/x64/Debug/: c_style_compiler_avr.exe.recipe  c_style_compiler_avr.ilk  tokenizer.obj.enc  vc143.idb
c_style_.c581acf0/x64/Debug/c_style_.c581acf0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  c_style_compiler_avr.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: compiler.h  fileToString.cpp  parser.cpp  tokenizer.cpp  variableManager.cpp
src/headers/: parser.h  tokenizer.h
